--- a/wiki/ExampleAgent.wiki
+++ b/wiki/ExampleAgent.wiki
@@ -1,55 +1,55 @@
-= Introduction =
+= Cahser Agent =
 
 The project includes an example agent defined in `src/chaseragent/ChaserAgent.java`. The source code includes original ABL syntax and equivalent MicroABL code. 
 
 {{{
-		/*
-	    initial_tree {
-	    	with (priority 3) mental_act {
-				System.out.println("Starting Chaser Agent");
-	    	}
+/*
+initial_tree {
+  with (priority 3) mental_act {
+    System.out.println("Starting Chaser Agent");
+  }
 	     	
-	    	with (priority 2) subgoal manageFiring();
-	    	with (priority 1) subgoal manageMovement();
-	    }*/
+  with (priority 2) subgoal manageFiring();
+  with (priority 1) subgoal manageMovement();
+}*/
 
-		ArrayList<StepPrototype> steps = new ArrayList<StepPrototype>();  
-		steps.add(StepPrototype.createAction(LogAction).setParameters(new Object[] { "Starting Chaser Agent" }).setPriority(3));
-		steps.add(StepPrototype.createSubgoal("manageFiring").setPriority(2));  
-		steps.add(StepPrototype.createSubgoal("manageMovement").setPriority(1)); 
-		behaviorLibrary.add(BehaviorPrototype.createParallel(Agent.INITIAL_GOAL).setSteps(steps));		
+ArrayList<StepPrototype> steps = new ArrayList<StepPrototype>();  
+steps.add(StepPrototype.createAction(LogAction).setParameters(new Object[] { "Starting Chaser Agent" }).setPriority(3));
+steps.add(StepPrototype.createSubgoal("manageFiring").setPriority(2));  
+steps.add(StepPrototype.createSubgoal("manageMovement").setPriority(1)); 
+behaviorLibrary.add(BehaviorPrototype.createParallel(Agent.INITIAL_GOAL).setSteps(steps));		
  		
-		/*
-		sequential behavior manageFiring() {
-			subgoal Wait(2000);					// this suspends the execution of the behavior
-			with (persistent) subgoal fire();
-		}*/
+
+/*
+sequential behavior manageFiring() {
+  subgoal Wait(2000); // this suspends the execution of the behavior
+  with (persistent) subgoal fire();
+}*/
 		 
-		steps = new ArrayList<StepPrototype>();
-		steps.add(StepPrototype.createAction(WaitAction).setParameters(new Object[] { 2000 })); 
-		steps.add(StepPrototype.createSubgoal("fire").setModifier(StepModifier.Persistent));
-		behaviorLibrary.add(BehaviorPrototype.createSequential("manageFiring").setSteps(steps)); 
+steps = new ArrayList<StepPrototype>();
+steps.add(StepPrototype.createAction(WaitAction).setParameters(new Object[] { 2000 })); 
+steps.add(StepPrototype.createSubgoal("fire").setModifier(StepModifier.Persistent));
+behaviorLibrary.add(BehaviorPrototype.createSequential("manageFiring").setSteps(steps)); 
 		
-		/*
-		sequential behavior fire() {
-			precondition {
-				(PlayerWME locationX::playerX locationY::playerY)	// locationX invokes PlayerMWE.getLocationX() 
-				(ChaserWME locationX::chaserX locationY::chaserY)   // :: is used to bind properties to behavior scoped variables
-			}
 
-			act fire(chaserX, chaserY, playerX, playerY);	
-			subgoal Wait(500); 
-		}*/
+/*
+sequential behavior fire() {
+  precondition {
+    (PlayerWME locationX::playerX locationY::playerY)	
+    (ChaserWME locationX::chaserX locationY::chaserY)   
+  }
+
+  act fire(chaserX, chaserY, playerX, playerY);	
+  subgoal Wait(500); 
+}*/
  
-		ArrayList<ConditionPrototype> preconditions = new ArrayList<ConditionPrototype>();
-		preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("x", "chaserX").addBinding("y", "chaserY"));
-		preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("x", "playerX").addBinding("y", "playerY"));
-
-		steps = new ArrayList<StepPrototype>();  
-		steps.add(StepPrototype.createAction(FireAction).setParameters(new Object[] { 
-				new Variable("chaserX"), new Variable("chaserY"), new Variable("playerX"), new Variable("playerY") }));  
-		steps.add(StepPrototype.createAction(WaitAction).setParameters(new Object[] { 500 })); 
-		behaviorLibrary.add(BehaviorPrototype.createSequential("fire").setSteps(steps).setPreconditions(preconditions)); 		
+ArrayList<ConditionPrototype> preconditions = new ArrayList<ConditionPrototype>();
+preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("x", "chaserX").addBinding("y", "chaserY"));
+preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("x", "playerX").addBinding("y", "playerY"));
+steps = new ArrayList<StepPrototype>();  
+steps.add(StepPrototype.createAction(FireAction).setParameters(new Object[] { new Variable("chaserX"), new Variable("chaserY"), new Variable("playerX"), new Variable("playerY") }));  
+steps.add(StepPrototype.createAction(WaitAction).setParameters(new Object[] { 500 })); 
+behaviorLibrary.add(BehaviorPrototype.createSequential("fire").setSteps(steps).setPreconditions(preconditions)); 		
  		
 		/*
 		sequential behavior manageMovement() { 
