--- a/wiki/ExampleAgent.wiki
+++ b/wiki/ExampleAgent.wiki
@@ -51,113 +51,108 @@ steps.add(StepPrototype.createAction(FireAction).setParameters(new Object[] { ne
 steps.add(StepPrototype.createAction(WaitAction).setParameters(new Object[] { 500 })); 
 behaviorLibrary.add(BehaviorPrototype.createSequential("fire").setSteps(steps).setPreconditions(preconditions)); 		
  		
-		/*
-		sequential behavior manageMovement() { 
-			with (persistent) subgoal move();
-		}*/ 
- 
-		steps = new ArrayList<StepPrototype>();
-		steps.add(StepPrototype.createSubgoal("move").setModifier(StepModifier.Persistent));
-		behaviorLibrary.add(BehaviorPrototype.createSequential("manageMovement").setSteps(steps));
 
-		/*
-		sequential behavior move() {
-			precondition {
-				(PlayerWME locationY::playerY)
-				(ChaserWME locationY::chaserY) 
-				(chaserY > (playerY + ChaserSpeed))
-			}
-			specificity 3;
+/*
+sequential behavior manageMovement() { 
+  with (persistent) subgoal move();
+}*/ 
+ 
+steps = new ArrayList<StepPrototype>();
+steps.add(StepPrototype.createSubgoal("move").setModifier(StepModifier.Persistent));
+behaviorLibrary.add(BehaviorPrototype.createSequential("manageMovement").setSteps(steps));
+
+
+/*
+sequential behavior move() {
+  precondition {
+    (PlayerWME locationY::playerY)
+    (ChaserWME locationY::chaserY) 
+    (chaserY > (playerY + ChaserSpeed))
+  }
+  specificity 3;
 	 
-			act moveUp();
-		}*/ 
+  act moveUp();
+}*/ 
  
-		preconditions = new ArrayList<ConditionPrototype>();
-		preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("y", "chaserY")); 
-		preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("y", "playerY")); 
-		preconditions.add(ConditionPrototype.createMental(ChaserWME.class).setMethodName("greaterThanSum").setMethodParameters(
-				new Object[] { new Variable("chaserY"), new Variable("playerY"), Game.ChaserSpeed} ));
+preconditions = new ArrayList<ConditionPrototype>();
+preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("y", "chaserY")); 
+preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("y", "playerY")); 
+preconditions.add(ConditionPrototype.createMental(ChaserWME.class).setMethodName("greaterThanSum").setMethodParameters( new Object[] { new Variable("chaserY"), new Variable("playerY"), Game.ChaserSpeed} ));
+steps = new ArrayList<StepPrototype>();  
+steps.add(StepPrototype.createAction(MoveUpAction));  
+behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(3).setSteps(steps).setPreconditions(preconditions)); 		
  
-		steps = new ArrayList<StepPrototype>();  
-		steps.add(StepPrototype.createAction(MoveUpAction));  
-		behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(3).setSteps(steps).setPreconditions(preconditions)); 		
+
+/*
+sequential behavior move() {
+  precondition {
+    (PlayerWME locationY::playerY)
+    (ChaserWME locationY::chaserY) 
+    (chaserY < (playerY - ChaserSpeed))
+  }
+  specificity 3;
+
+  act moveDown();
+}*/
+
+preconditions = new ArrayList<ConditionPrototype>();
+preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("y", "chaserY")); 
+preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("y", "playerY"));
+preconditions.add(ConditionPrototype.createMental(ChaserWME.class).setMethodName("lessThanDiff").setMethodParameters( new Object[] { new Variable("chaserY"), new Variable("playerY"), Game.ChaserSpeed} )); 
+steps = new ArrayList<StepPrototype>();  
+steps.add(StepPrototype.createAction(MoveDownAction));  
+behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(3).setSteps(steps).setPreconditions(preconditions)); 		
+
+
+/*
+sequential behavior move() {
+  precondition {
+    (PlayerWME locationX::playerX)
+    (ChaserWME locationX::chaserX) 
+    (chaserX > (playerX + ChaserSpeed))
+  }
+  specificity 2;
+
+  act moveLeft();
+}*/ 
+
+preconditions = new ArrayList<ConditionPrototype>();
+preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("x", "chaserX")); 		preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("x", "playerX")); 		preconditions.add(ConditionPrototype.createMental(ChaserWME.class).setMethodName("greaterThanSum").setMethodParameters(new Object[] { new Variable("chaserX"), new Variable("playerX"), Game.ChaserSpeed} )); 
+steps = new ArrayList<StepPrototype>();  
+steps.add(StepPrototype.createAction(MoveLeftAction));  
+behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(2).setSteps(steps).setPreconditions(preconditions)); 		
+
+
+/*
+sequential behavior move() {
+  precondition { 
+    (PlayerWME locationX::playerX)
+    (ChaserWME locationX::chaserX) 
+    (chaserX < (playerX - ChaserSpeed))
+  }
+  specificity 2;
+
+  act moveRight();
+}*/		
  
-		/*
-		sequential behavior move() {
-			precondition {
-				(PlayerWME locationY::playerY)
-				(ChaserWME locationY::chaserY) 
-				(chaserY < (playerY - ChaserSpeed))
-			}
-			specificity 3;
+preconditions = new ArrayList<ConditionPrototype>();
+preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("x", "chaserX")); 
+preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("x", "playerX"));
+preconditions.add(ConditionPrototype.createMental(ChaserWME.class).setMethodName("lessThanDiff").setMethodParameters(new Object[] { new Variable("chaserX"), new Variable("playerX"), Game.ChaserSpeed} )); 
+steps = new ArrayList<StepPrototype>();  
+steps.add(StepPrototype.createAction(MoveRightAction));  
+behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(2).setSteps(steps).setPreconditions(preconditions)); 		
 
-			act moveDown();
-		}*/
 
-		preconditions = new ArrayList<ConditionPrototype>();
-		preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("y", "chaserY")); 
-		preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("y", "playerY"));
-		preconditions.add(ConditionPrototype.createMental(ChaserWME.class).setMethodName("lessThanDiff").setMethodParameters(
-				new Object[] { new Variable("chaserY"), new Variable("playerY"), Game.ChaserSpeed} )); 
-
-		steps = new ArrayList<StepPrototype>();  
-		steps.add(StepPrototype.createAction(MoveDownAction));  
-		behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(3).setSteps(steps).setPreconditions(preconditions)); 		
-
-		/*
-		sequential behavior move() {
-			precondition {
-				(PlayerWME locationX::playerX)
-				(ChaserWME locationX::chaserX) 
-				(chaserX > (playerX + ChaserSpeed))
-			}
-			specificity 2;
-
-			act moveLeft();
-		}*/ 
-
-		preconditions = new ArrayList<ConditionPrototype>();
-		preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("x", "chaserX")); 
-		preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("x", "playerX")); 
-		preconditions.add(ConditionPrototype.createMental(ChaserWME.class).setMethodName("greaterThanSum").setMethodParameters(
-				new Object[] { new Variable("chaserX"), new Variable("playerX"), Game.ChaserSpeed} )); 
-
-		steps = new ArrayList<StepPrototype>();  
-		steps.add(StepPrototype.createAction(MoveLeftAction));  
-		behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(2).setSteps(steps).setPreconditions(preconditions)); 		
-
-		/*
-		sequential behavior move() {
-			precondition { 
-				(PlayerWME locationX::playerX)
-				(ChaserWME locationX::chaserX) 
-				(chaserX < (playerX - ChaserSpeed))
-			}
-			specificity 2;
-
-			act moveRight();
-		}*/		
- 
-		preconditions = new ArrayList<ConditionPrototype>();
-		preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("x", "chaserX")); 
-		preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("x", "playerX"));
-		preconditions.add(ConditionPrototype.createMental(ChaserWME.class).setMethodName("lessThanDiff").setMethodParameters(
-				new Object[] { new Variable("chaserX"), new Variable("playerX"), Game.ChaserSpeed} )); 
-
-		steps = new ArrayList<StepPrototype>();  
-		steps.add(StepPrototype.createAction(MoveRightAction));  
-		behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(2).setSteps(steps).setPreconditions(preconditions)); 		
-
-		/*
-		sequential behavior move() {
-			specificity 1;
-			act stop();
-			subgoal Wait(1000); 
-		}
-		*/ 
+/*
+sequential behavior move() {
+  specificity 1;
+  act stop();
+  subgoal Wait(1000); 
+} */ 
 		
-		steps = new ArrayList<StepPrototype>();  
-		steps.add(StepPrototype.createAction(StopAction));  
-		steps.add(StepPrototype.createAction(WaitAction).setParameters(new Object[] { 1000 })); 
-		behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(1).setSteps(steps)); 						
+steps = new ArrayList<StepPrototype>();  
+steps.add(StepPrototype.createAction(StopAction));  
+steps.add(StepPrototype.createAction(WaitAction).setParameters(new Object[] { 1000 })); 
+behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(1).setSteps(steps)); 						
 }}}
