--- a/wiki/EmbeddedLanguage.wiki
+++ b/wiki/EmbeddedLanguage.wiki
@@ -1,6 +1,6 @@
 = Embedded Language =
 
-The project includes an example agent defined in `src/chaseragent/ChaserAgent.java`. The source code includes original ABL syntax and equivalent MicroABL code. 
+[http://users.soe.ucsc.edu/~amsmith/ Adam Smith] has provided a collection of utility methods that greatly reduce the amount of syntax needed to author MicroABL agents. The methods are defined in `src/microabl/EmbeddedLanguage.java` and demonstrated in `src/chaseragent/ChaserAgentEmbedded.java`. The code shows a comparison of the embedded language and the original ABL syntax:
 
 {{{
 /*
