Edited wiki page ExampleAgent through web user interface.

--- a/wiki/ExampleAgent.wiki
+++ b/wiki/ExampleAgent.wiki
@@ -1,4 +1,4 @@
-= Cahser Agent =
+= Chaser Agent =
 
 The project includes an example agent defined in `src/chaseragent/ChaserAgent.java`. The source code includes original ABL syntax and equivalent MicroABL code. 
 
@@ -8,55 +8,59 @@ initial_tree {
   with (priority 3) mental_act {
     System.out.println("Starting Chaser Agent");
   }
-	     	
+                
   with (priority 2) subgoal manageFiring();
   with (priority 1) subgoal manageMovement();
 }*/
 
-initial_tree(
-  with(priority(3), action(LogAction, "Starting Chaser Agent")),
-  with(priority(2), subgoal(ManageFiring)),
-  with(priority(1), subgoal(ManageMovement))),
+ArrayList<StepPrototype> steps = new ArrayList<StepPrototype>();  
+steps.add(StepPrototype.createAction(LogAction).setParameters(new Object[] { "Starting Chaser Agent" }).setPriority(3));
+steps.add(StepPrototype.createSubgoal("manageFiring").setPriority(2));  
+steps.add(StepPrototype.createSubgoal("manageMovement").setPriority(1)); 
+behaviorLibrary.add(BehaviorPrototype.createParallel(Agent.INITIAL_GOAL).setSteps(steps));              
+                
 
-					
 /*
 sequential behavior manageFiring() {
   subgoal Wait(2000); // this suspends the execution of the behavior
   with (persistent) subgoal fire();
 }*/
-		 
-sequential_behavior(ManageFiring,
-  action(WaitAction, 2000),
-  with(persistent, subgoal(Fire))),
-						
+                 
+steps = new ArrayList<StepPrototype>();
+steps.add(StepPrototype.createAction(WaitAction).setParameters(new Object[] { 2000 })); 
+steps.add(StepPrototype.createSubgoal("fire").setModifier(StepModifier.Persistent));
+behaviorLibrary.add(BehaviorPrototype.createSequential("manageFiring").setSteps(steps)); 
+                
 
 /*
 sequential behavior fire() {
   precondition {
-    (PlayerWME locationX::playerX locationY::playerY)	
+    (PlayerWME locationX::playerX locationY::playerY)   
     (ChaserWME locationX::chaserX locationY::chaserY)   
   }
 
-  act fire(chaserX, chaserY, playerX, playerY);	
+  act fire(chaserX, chaserY, playerX, playerY); 
   subgoal Wait(500); 
 }*/
  
-sequential_behavior(Fire,
-  precondition(			     
-    wme(ChaserWME.class,bind(x,chaserX),bind(y,chaserY)),			
-    wme(PlayerWME.class,bind(x,playerX),bind(y,playerY))),
-  action(FireAction, vars(chaserX, chaserY, playerX, playerY)),
-  action(WaitAction, 500)),
- 		
+ArrayList<ConditionPrototype> preconditions = new ArrayList<ConditionPrototype>();
+preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("x", "chaserX").addBinding("y", "chaserY"));
+preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("x", "playerX").addBinding("y", "playerY"));
+steps = new ArrayList<StepPrototype>();  
+steps.add(StepPrototype.createAction(FireAction).setParameters(new Object[] { new Variable("chaserX"), new Variable("chaserY"), new Variable("playerX"), new Variable("playerY") }));  
+steps.add(StepPrototype.createAction(WaitAction).setParameters(new Object[] { 500 })); 
+behaviorLibrary.add(BehaviorPrototype.createSequential("fire").setSteps(steps).setPreconditions(preconditions));                
+                
 
 /*
 sequential behavior manageMovement() { 
   with (persistent) subgoal move();
 }*/ 
  
-sequential_behavior(ManageMovement,
-  with(persistent, subgoal(Move))),
-		
+steps = new ArrayList<StepPrototype>();
+steps.add(StepPrototype.createSubgoal("move").setModifier(StepModifier.Persistent));
+behaviorLibrary.add(BehaviorPrototype.createSequential("manageMovement").setSteps(steps));
+
 
 /*
 sequential behavior move() {
@@ -66,18 +70,18 @@ sequential behavior move() {
     (chaserY > (playerY + ChaserSpeed))
   }
   specificity 3;
-	 
+         
   act moveUp();
 }*/ 
  
-sequential_behavior(Move,
-  precondition(
-    wme(PlayerWME.class,bind(y,playerY)),
-    wme(ChaserWME.class,bind(y,chaserY)),				  
-    mental(ChaserWME.class,"greaterThanSum", var(chaserY), var(playerY), Game.ChaserSpeed)),
-  specificity(3),
-  action(MoveUpAction)),
-				 
+preconditions = new ArrayList<ConditionPrototype>();
+preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("y", "chaserY")); 
+preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("y", "playerY")); 
+preconditions.add(ConditionPrototype.createMental(ChaserWME.class).setMethodName("greaterThanSum").setMethodParameters( new Object[] { new Variable("chaserY"), new Variable("playerY"), Game.ChaserSpeed} ));
+steps = new ArrayList<StepPrototype>();  
+steps.add(StepPrototype.createAction(MoveUpAction));  
+behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(3).setSteps(steps).setPreconditions(preconditions));              
+ 
 
 /*
 sequential behavior move() {
@@ -91,14 +95,14 @@ sequential behavior move() {
   act moveDown();
 }*/
 
-sequential_behavior(Move,
-  precondition(
-    wme(PlayerWME.class,bind(y,playerY)),
-    wme(ChaserWME.class,bind(y,chaserY)),
-    mental(ChaserWME.class,"lessThanDiff", var(chaserY), var(playerY), Game.ChaserSpeed)),
-  specificity(3),
-  action(MoveDownAction)),
-				
+preconditions = new ArrayList<ConditionPrototype>();
+preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("y", "chaserY")); 
+preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("y", "playerY"));
+preconditions.add(ConditionPrototype.createMental(ChaserWME.class).setMethodName("lessThanDiff").setMethodParameters( new Object[] { new Variable("chaserY"), new Variable("playerY"), Game.ChaserSpeed} )); 
+steps = new ArrayList<StepPrototype>();  
+steps.add(StepPrototype.createAction(MoveDownAction));  
+behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(3).setSteps(steps).setPreconditions(preconditions));              
+
 
 /*
 sequential behavior move() {
@@ -112,14 +116,12 @@ sequential behavior move() {
   act moveLeft();
 }*/ 
 
-sequential_behavior(Move,
-  precondition(
-    wme(PlayerWME.class,bind(x,playerX)),						 
-    wme(ChaserWME.class,bind(x,chaserX)),
-    mental(ChaserWME.class,"greaterThanSum", var(chaserX), var(playerX), Game.ChaserSpeed)),
-  specificity(2),
-  action(MoveLeftAction)),
-						
+preconditions = new ArrayList<ConditionPrototype>();
+preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("x", "chaserX"));           preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("x", "playerX"));           preconditions.add(ConditionPrototype.createMental(ChaserWME.class).setMethodName("greaterThanSum").setMethodParameters(new Object[] { new Variable("chaserX"), new Variable("playerX"), Game.ChaserSpeed} )); 
+steps = new ArrayList<StepPrototype>();  
+steps.add(StepPrototype.createAction(MoveLeftAction));  
+behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(2).setSteps(steps).setPreconditions(preconditions));              
+
 
 /*
 sequential behavior move() {
@@ -131,16 +133,16 @@ sequential behavior move() {
   specificity 2;
 
   act moveRight();
-}*/		
+}*/             
  
-sequential_behavior(Move,
-  precondition(
-    wme(PlayerWME.class,bind(x,playerX)),
-    wme(ChaserWME.class,bind(x,chaserX)),
-    mental(ChaserWME.class,"lessThanDiff", var(chaserX), var(playerX), Game.ChaserSpeed)),
-  specificity(2),
-  action(MoveRightAction)),
-					
+preconditions = new ArrayList<ConditionPrototype>();
+preconditions.add(ConditionPrototype.createWMECondition(ChaserWME.class).addBinding("x", "chaserX")); 
+preconditions.add(ConditionPrototype.createWMECondition(PlayerWME.class).addBinding("x", "playerX"));
+preconditions.add(ConditionPrototype.createMental(ChaserWME.class).setMethodName("lessThanDiff").setMethodParameters(new Object[] { new Variable("chaserX"), new Variable("playerX"), Game.ChaserSpeed} )); 
+steps = new ArrayList<StepPrototype>();  
+steps.add(StepPrototype.createAction(MoveRightAction));  
+behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(2).setSteps(steps).setPreconditions(preconditions));              
+
 
 /*
 sequential behavior move() {
@@ -148,9 +150,9 @@ sequential behavior move() {
   act stop();
   subgoal Wait(1000); 
 } */ 
-		
-sequential_behavior(Move,
-  specificity(1),
-  action(StopAction),
-  action(WaitAction, 1000))
+                
+steps = new ArrayList<StepPrototype>();  
+steps.add(StepPrototype.createAction(StopAction));  
+steps.add(StepPrototype.createAction(WaitAction).setParameters(new Object[] { 1000 })); 
+behaviorLibrary.add(BehaviorPrototype.createSequential("move").setSpecificity(1).setSteps(steps));                                              
 }}}
